Fonctionnalités : refonte de tout la structure du projet base sur le layout front end (a ne pas merge sur la banche principale, plein d'erreur)

--- a/src/main/resources/static/html/members/extend_subscription.html
+++ b/src/main/resources/static/html/members/extend_subscription.html
@@ -3,275 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Extension d'Abonnement - Bibliothèque</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
-    <style>
-        .card-header {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-        }
-        .btn-primary {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            border: none;
-        }
-        .btn-primary:hover {
-            background: linear-gradient(135deg, #764ba2 0%, #667eea 100%);
-        }
-        .btn-secondary {
-            background: linear-gradient(135deg, #6c757d 0%, #5a6268 100%);
-            border: none;
-        }
-        .btn-secondary:hover {
-            background: linear-gradient(135deg, #5a6268 0%, #6c757d 100%);
-        }
-        .form-control:focus {
-            border-color: #667eea;
-            box-shadow: 0 0 0 0.2rem rgba(102, 126, 234, 0.25);
-        }
-        body {
-            background-color: #f8f9fa;
-        }
-        .member-info {
-            background: linear-gradient(135deg, #e3f2fd 0%, #bbdefb 100%);
-            border-radius: 10px;
-            padding: 15px;
-            margin-bottom: 20px;
-        }
-        .payment-method-card {
-            transition: transform 0.2s;
-            cursor: pointer;
-        }
-        .payment-method-card:hover {
-            transform: translateY(-2px);
-        }
-        .payment-method-card.selected {
-            border: 2px solid #667eea;
-            background-color: rgba(102, 126, 234, 0.1);
-        }
-    </style>
+    <title>Étendre l'Abonnement - Bibliothèque</title>
+    <link rel="stylesheet" href="/css/modern-style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="container mt-5">
-    <div class="row justify-content-center">
-        <div class="col-md-8">
-            <div class="card shadow-lg">
-                <div class="card-header">
-                    <h3 class="card-title mb-0">
-                        <i class="bi bi-calendar-plus me-2"></i>
-                        Extension d'Abonnement
-                    </h3>
-                </div>
-                <div class="card-body">
-                    <!-- Informations du membre -->
-                    <div class="member-info">
-                        <h5 class="mb-3">
-                            <i class="bi bi-person-circle me-2"></i>
-                            Informations du Membre
-                        </h5>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <p><strong>ID:</strong> <span id="member-id"></span></p>
-                                <p><strong>Nom:</strong> <span id="member-name"></span></p>
-                            </div>
-                            <div class="col-md-6">
-                                <p><strong>Email:</strong> <span id="member-email"></span></p>
-                                <p><strong>Abonnement actuel:</strong> <span id="current-subscription"></span></p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Formulaire d'extension -->
-                    <form id="extendSubscriptionForm">
-                        <div class="mb-4">
-                            <label class="form-label">
-                                <i class="bi bi-credit-card me-2"></i>
-                                Moyen de Paiement
-                            </label>
-                            <div class="row">
-                                <div class="col-md-4">
-                                    <div class="card payment-method-card" data-payment="CARTE_BANCAIRE">
-                                        <div class="card-body text-center">
-                                            <i class="bi bi-credit-card-2-front fs-2 text-primary"></i>
-                                            <h6 class="mt-2">Carte Bancaire</h6>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
-                                    <div class="card payment-method-card" data-payment="ESPECES">
-                                        <div class="card-body text-center">
-                                            <i class="bi bi-cash fs-2 text-success"></i>
-                                            <h6 class="mt-2">Espèces</h6>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
-                                    <div class="card payment-method-card" data-payment="VIREMENT">
-                                        <div class="card-body text-center">
-                                            <i class="bi bi-bank fs-2 text-info"></i>
-                                            <h6 class="mt-2">Virement</h6>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <input type="hidden" id="wayOfPayment" name="wayOfPayment" required>
-                        </div>
-
-                        <div class="mb-4">
-                            <label for="amount" class="form-label">
-                                <i class="bi bi-currency-euro me-2"></i>
-                                Montant (€)
-                            </label>
-                            <input type="number" class="form-control" id="amount" name="amount"
-                                   step="0.01" min="0" placeholder="0.00" required>
-                            <div class="form-text">
-                                <i class="bi bi-info-circle me-1"></i>
-                                Montant pour l'extension d'abonnement
-                            </div>
-                        </div>
-
-                        <div class="mb-4">
-                            <label for="memberId" class="form-label">
-                                <i class="bi bi-person-badge me-2"></i>
-                                ID du Membre
-                            </label>
-                            <input type="number" class="form-control" id="memberId" name="memberId"
-                                   placeholder="Entrez l'ID du membre" required>
-                        </div>
-
-                        <div class="alert alert-info" role="alert">
-                            <i class="bi bi-lightbulb me-2"></i>
-                            <strong>Information:</strong> L'extension d'abonnement sera automatiquement appliquée après validation du paiement.
-                        </div>
-
-                        <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                            <button type="button" class="btn btn-secondary me-md-2" onclick="history.back()">
-                                <i class="bi bi-arrow-left me-2"></i>
-                                Retour
-                            </button>
-                            <button type="submit" class="btn btn-primary">
-                                <i class="bi bi-check-circle me-2"></i>
-                                Étendre l'Abonnement
-                            </button>
-                        </div>
-                    </form>
-                </div>
+    <div class="container">
+        <div class="card">
+            <div class="header">
+                <h1>📅 Étendre l'Abonnement</h1>
+                <p>Prolongez la durée d'adhésion d'un membre</p>
             </div>
-        </div>
-    </div>
-</div>
 
-<!-- Modal de confirmation -->
-<div class="modal fade" id="confirmationModal" tabindex="-1">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title">
-                    <i class="bi bi-check-circle text-success me-2"></i>
-                    Confirmation
-                </h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-            </div>
-            <div class="modal-body">
-                <p>L'abonnement a été étendu avec succès !</p>
-                <p><strong>Montant payé:</strong> <span id="modal-amount"></span> €</p>
-                <p><strong>Moyen de paiement:</strong> <span id="modal-payment-method"></span></p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
-                    <i class="bi bi-check me-2"></i>
-                    OK
-                </button>
-            </div>
-        </div>
-    </div>
-</div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script>
-    // Sélection du moyen de paiement
-    document.querySelectorAll('.payment-method-card').forEach(card => {
-        card.addEventListener('click', function() {
-            // Retirer la sélection précédente
-            document.querySelectorAll('.payment-method-card').forEach(c => c.classList.remove('selected'));
-
-            // Ajouter la sélection à la carte cliquée
-            this.classList.add('selected');
-
-            // Mettre à jour le champ caché
-            document.getElementById('wayOfPayment').value = this.dataset.payment;
-        });
-    });
-
-    // Gestion du formulaire
-    document.getElementById('extendSubscriptionForm').addEventListener('submit', function(e) {
-        e.preventDefault();
-
-        const memberId = document.getElementById('memberId').value;
-        const wayOfPayment = document.getElementById('wayOfPayment').value;
-        const amount = document.getElementById('amount').value;
-
-        if (!wayOfPayment) {
-            alert('Veuillez sélectionner un moyen de paiement');
-            return;
-        }
-
-        // Préparer les données
-        const formData = new FormData();
-        formData.append('wayOfPayment', wayOfPayment);
-        formData.append('amount', amount);
-
-        // Envoyer la requête
-        fetch(`/api/members/${memberId}/extend-subscription`, {
-            method: 'POST',
-            body: formData
-        })
-        .then(response => {
-            if (response.ok) {
-                return response.text();
-            }
-            throw new Error('Erreur lors de l\'extension de l\'abonnement');
-        })
-        .then(data => {
-            // Afficher le modal de confirmation
-            document.getElementById('modal-amount').textContent = amount;
-            document.getElementById('modal-payment-method').textContent = wayOfPayment.replace('_', ' ');
-
-            const modal = new bootstrap.Modal(document.getElementById('confirmationModal'));
-            modal.show();
-
-            // Réinitialiser le formulaire
-            document.getElementById('extendSubscriptionForm').reset();
-            document.querySelectorAll('.payment-method-card').forEach(c => c.classList.remove('selected'));
-        })
-        .catch(error => {
-            console.error('Erreur:', error);
-            alert('Erreur lors de l\'extension de l\'abonnement: ' + error.message);
-        });
-    });
-
-    // Fonction pour charger les informations du membre (optionnel)
-    function loadMemberInfo(memberId) {
-        fetch(`/api/members/${memberId}`)
-        .then(response => response.json())
-        .then(member => {
-            document.getElementById('member-id').textContent = member.id;
-            document.getElementById('member-name').textContent = member.name;
-            document.getElementById('member-email').textContent = member.email;
-            // Ajoutez d'autres informations selon votre modèle Member
-        })
-        .catch(error => {
-            console.error('Erreur lors du chargement des informations du membre:', error);
-        });
-    }
-
-    // Charger les informations du membre lorsque l'ID change
-    document.getElementById('memberId').addEventListener('blur', function() {
-        const memberId = this.value;
-        if (memberId) {
-            loadMemberInfo(memberId);
-        }
-    });
-</script>
-</body>
-</html>
+            <form id="subscriptionForm">
+                <div class="form-group
