--- a/src/main/resources/static/html/members/new.html
+++ b/src/main/resources/static/html/members/new.html
@@ -4,211 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nouveau Membre - Bibliothèque</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.0/font/bootstrap-icons.css" rel="stylesheet">
-    <style>
-        .card-header {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-        }
-        .btn-primary {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            border: none;
-        }
-        .btn-primary:hover {
-            background: linear-gradient(135deg, #764ba2 0%, #667eea 100%);
-        }
-        .form-control:focus {
-            border-color: #667eea;
-            box-shadow: 0 0 0 0.2rem rgba(102, 126, 234, 0.25);
-        }
-        body {
-            background-color: #f8f9fa;
-        }
-    </style>
+    <link rel="stylesheet" href="/css/modern-style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="container mt-5">
-    <div class="row justify-content-center">
-        <div class="col-md-8 col-lg-6">
-            <div class="card shadow-lg border-0">
-                <div class="card-header text-center py-4">
-                    <h2 class="mb-0">
-                        <i class="bi bi-person-plus-fill me-2"></i>
-                        Nouveau Membre
-                    </h2>
-                </div>
-                <div class="card-body p-5">
-                    <!-- Alert pour les messages -->
-                    <div id="alertContainer"></div>
-
-                    <form id="memberForm">
-                        <div class="row mb-3">
-                            <div class="col-md-6">
-                                <label for="name" class="form-label fw-bold">
-                                    <i class="bi bi-person me-1"></i>Nom *
-                                </label>
-                                <input type="text" class="form-control" id="name" name="name" required>
-                            </div>
-                            <div class="col-md-6">
-                                <label for="firstName" class="form-label fw-bold">
-                                    <i class="bi bi-person me-1"></i>Prénom *
-                                </label>
-                                <input type="text" class="form-control" id="firstName" name="firstName" required>
-                            </div>
-                        </div>
-
-                        <div class="mb-3">
-                            <label for="email" class="form-label fw-bold">
-                                <i class="bi bi-envelope me-1"></i>Email *
-                            </label>
-                            <input type="email" class="form-control" id="email" name="email" required>
-                        </div>
-
-                        <div class="mb-3">
-                            <label for="address" class="form-label fw-bold">
-                                <i class="bi bi-geo-alt me-1"></i>Adresse *
-                            </label>
-                            <textarea class="form-control" id="address" name="address" rows="3" required></textarea>
-                        </div>
-
-                        <div class="mb-4">
-                            <label for="subscription" class="form-label fw-bold">
-                                <i class="bi bi-card-list me-1"></i>Type d'abonnement *
-                            </label>
-                            <select class="form-select" id="subscription" name="subscription" required>
-                                <option value="">Choisir un type d'abonnement...</option>
-                            </select>
-                            <div id="subscriptionLoader" class="text-center mt-2" style="display: none;">
-                                <div class="spinner-border spinner-border-sm text-primary" role="status">
-                                    <span class="visually-hidden">Chargement...</span>
-                                </div>
-                                <small class="text-muted ms-2">Chargement des abonnements...</small>
-                            </div>
-                        </div>
-
-                        <div class="d-grid">
-                            <button type="submit" class="btn btn-primary btn-lg" id="submitBtn">
-                                <i class="bi bi-check-circle me-2"></i>
-                                Créer le membre
-                            </button>
-                        </div>
-                    </form>
-                </div>
+    <div class="container">
+        <div class="card">
+            <div class="header">
+                <h1>👤 Nouveau Membre</h1>
+                <p>Créez un nouveau compte membre pour la bibliothèque</p>
             </div>
-        </div>
-    </div>
-</div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script>
-    document.addEventListener('DOMContentLoaded', function() {
-        loadSubscriptions();
-
-        const form = document.getElementById('memberForm');
-        form.addEventListener('submit', handleSubmit);
-    });
-
-    function showAlert(message, type = 'success') {
-        const alertContainer = document.getElementById('alertContainer');
-        const alertHtml = `
-                <div class="alert alert-${type} alert-dismissible fade show" role="alert">
-                    <i class="bi bi-${type === 'success' ? 'check-circle-fill' : 'exclamation-triangle-fill'} me-2"></i>
-                    ${message}
-                    <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+            <form id="memberForm">
+                <div class="form-group">
+                    <label for="firstName">👤 Prénom</label>
+                    <input type="text" id="firstName" name="firstName" class="form-control" placeholder="Entrez le prénom" required>
                 </div>
-            `;
-        alertContainer.innerHTML = alertHtml;
 
-        // Scroll vers le haut pour voir l'alerte
-        alertContainer.scrollIntoView({ behavior: 'smooth' });
-    }
-
-    async function loadSubscriptions() {
-        const subscriptionSelect = document.getElementById('subscription');
-        const loader = document.getElementById('subscriptionLoader');
-
-        try {
-            loader.style.display = 'block';
-
-            const response = await fetch('/api/subscriptions');
-
-            if (!response.ok) {
-                throw new Error('Erreur lors du chargement des abonnements');
-            }
-
-            const subscriptions = await response.json();
-
-            subscriptionSelect.innerHTML = '<option value="">Choisir un type d\'abonnement...</option>';
-
-            subscriptions.forEach(subscription => {
-                const option = document.createElement('option');
-                option.value = subscription.id;
-                option.textContent = subscription.type;
-                subscriptionSelect.appendChild(option);
-            });
-
-        } catch (error) {
-            console.error('Erreur:', error);
-            showAlert('Erreur lors du chargement des types d\'abonnement', 'danger');
-            subscriptionSelect.innerHTML = '<option value="">Erreur de chargement</option>';
-        } finally {
-            loader.style.display = 'none';
-        }
-    }
-
-    async function handleSubmit(event) {
-        event.preventDefault();
-
-        const submitBtn = document.getElementById('submitBtn');
-        const originalText = submitBtn.innerHTML;
-
-        // Désactiver le bouton et afficher un spinner
-        submitBtn.disabled = true;
-        submitBtn.innerHTML = `
-                <span class="spinner-border spinner-border-sm me-2" role="status"></span>
-                Création en cours...
-            `;
-
-        try {
-            const formData = new FormData(event.target);
-
-            const memberData = {
-                name: formData.get('name'),
-                firstName: formData.get('firstName'),
-                email: formData.get('email'),
-                address: formData.get('address'),
-                subscription: {
-                    id: parseInt(formData.get('subscription'))
-                }
-            };
-
-            const response = await fetch('/api/members', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(memberData)
-            });
-
-            if (response.ok) {
-                showAlert('Utilisateur créé avec succès !', 'success');
-                event.target.reset(); // Réinitialiser le formulaire
-            } else {
-                const errorData = await response.json();
-                const errorMessage = errorData.message || `Erreur ${errorData.code || response.status}`;
-                showAlert(errorMessage, 'danger');
-            }
-
-        } catch (error) {
-            console.error('Erreur:', error);
-            showAlert('Erreur de connexion au serveur', 'danger');
-        } finally {
-            // Réactiver le bouton
-            submitBtn.disabled = false;
-            submitBtn.innerHTML = originalText;
-        }
-    }
-</script>
-</body>
-</html>
+                <div class="form-group
